Memos-elb.yaml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  KeyPair:
    Description: Select KeyPair Name.
    Type: AWS::EC2::KeyPair::KeyName
Resources:
  MemosVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: MemosVpc
  MemosPubSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MemosVPC
      CidrBlock: 10.0.10.0/24
      AvailabilityZone: ap-northeast-1a
      Tags:
      - Key: Name
        Value: MemosPubSubnet1a
  MemosPubSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MemosVPC
      CidrBlock: 10.0.11.0/24
      AvailabilityZone: ap-northeast-1c
      Tags:
      - Key: Name
        Value: MemosPubSubnet1c
  MemosPriSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MemosVPC
      CidrBlock: 10.0.20.0/24
      AvailabilityZone: ap-northeast-1a
      Tags:
      - Key: Name
        Value: MemosPriSubnet1a
  MemosPriSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: MemosVPC
      CidrBlock: 10.0.21.0/24
      AvailabilityZone: ap-northeast-1c
      Tags:
      - Key: Name
        Value: MemosPriSubnet1c
  MemosIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: MemosIgw
  MemosIgwAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: MemosVPC
      InternetGatewayId:
        Ref: MemosIgw
  MemosRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: MemosVPC
      Tags:
      - Key: Name
        Value: MemosRouteTable
  MemosRouteInterNet:
    Type: AWS::EC2::Route
    DependsOn: MemosIgwAttach
    Properties:
      RouteTableId:
        Ref: MemosRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: MemosIgw
  MemosSubnetRouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: MemosPubSubnet1a
      RouteTableId:
        Ref: MemosRouteTable
  MemosSubnetRouteTableAssociationC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: MemosPubSubnet1c
      RouteTableId:
        Ref: MemosRouteTable
  MemosInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
        Ref: MemosVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: MemosInstanceSecurityGroup
  MemosDbSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: MemosDBSubnetGroup
      SubnetIds:
        - Ref: MemosPriSubnet1a
        - Ref: MemosPriSubnet1c
      Tags:
        - Key: Name
          Value: MemosDBSubnetGroup
  MemosRdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MemosRdsSecurityGroup
      VpcId:
        Ref: MemosVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 0.0.0.0/0
  MemosRdsInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      VPCSecurityGroups:
      - Ref: MemosRdsSecurityGroup
      AllocatedStorage: 5
      DBInstanceClass: db.t2.micro
      Engine: MySQL
      DBName: sample
      EngineVersion: 5.7.22
      MasterUsername: root
      MasterUserPassword: password
      DBSubnetGroupName: 
        Ref: MemosDbSubnetGroup
      AvailabilityZone: ap-northeast-1a
    DeletionPolicy: Snapshot
  MemosEC2Instance1a:
    Type: AWS::EC2::Instance
    DependsOn: MemosIgwAttach
    Properties:
      ImageId: ami-011facbea5ec0363b
      InstanceType: t2.micro
      SubnetId: !Ref MemosPubSubnet1a
      KeyName: !Ref KeyPair
      Tags:
        - Key: Name
          Value: MemosEC2Instance1a
      SecurityGroupIds:
        - !Ref MemosInstanceSecurityGroup
  MemosEC2Instance1c:
    Type: AWS::EC2::Instance
    DependsOn: MemosIgwAttach
    Properties:
      AvailabilityZone: ap-northeast-1c
      ImageId: ami-011facbea5ec0363b
      InstanceType: t2.micro
      SubnetId: !Ref MemosPubSubnet1c
      KeyName: !Ref KeyPair
      Tags:
        - Key: Name
          Value: MemosEC2Instance1c
      SecurityGroupIds:
        - !Ref MemosInstanceSecurityGroup
  MemosAlbTg:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Name: MemosElbTg
      Port: 80
      Protocol: HTTP
      Matcher: 
        HttpCode: 200
      Targets:
        - Id: !Ref MemosEC2Instance1c
          Port: 80
        - Id: !Ref MemosEC2Instance1a
          Port: 80
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref MemosVPC
  MemosALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      LoadBalancerAttributes: 
        - Key: idle_timeout.timeout_seconds
          Value: 60
      Name: MemosALB
      SecurityGroups:
        - !Ref MemosAlbSg
      Subnets:
        - !Ref MemosPubSubnet1a
        - !Ref MemosPubSubnet1c
  MemosAlbLitener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      DefaultActions:
        - TargetGroupArn: !Ref MemosAlbTg
          Type: forward
      LoadBalancerArn: !Ref MemosALB
      Port: 80
      Protocol: HTTP
  MemosAlbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
        Ref: MemosVPC
      SecurityGroupIngress:
      - IpProtocol: TCP
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: TCP
        FromPort: 80
        ToPort: 80
        CidrIpv6: ::/0
      Tags:
      - Key: Name
        Value: MemosAlbSg
